--- a/package.json
+++ b/package.json
@@ -74,9 +74,11 @@
 	},
 	"dependencies": {
 		"bootstrap": "^5.3.3",
+		"jwt-decode": "^4.0.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap": "^2.10.4",
+		"react-cookie": "^7.2.0",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0"
